--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,15 +24,6 @@ bind -r L resize-pane -R 5
 unbind r
 bind r source-file ~/.tmux.conf \; display "Config reloaded!"
 
-# ----------- Colors -----------
-set -g @color_blue "#61afef"
-set -g @color_red "#ef596f"
-set -g @color_gray "#495162"
-set -g @color_white "#FFFFFF"
-set -g @color_black "#000000"
-set -g @color_bg "#282C34"
-set -g @color_fg "#abb2bf"
-
 # ----------- Status bar -----------
 # Status positioning and style
 set -g status-position top
@@ -40,26 +31,29 @@ set -g status-style "bg=default,fg=default"
 set -g status-justify centre
 
 # Status bar content
-set -g status-left "#[bg=default,fg=default,bold]#{?client_prefix,, NORMAL }#[bg=#{@color_blue},fg=#{@color_black},bold]#{?client_prefix, PREFIX ,}#[bg=default,fg=default,bold]"
+set -g status-left "#[bg=default,fg=default,bold]#{?client_prefix,, NORMAL }#[bg=blue,fg=default,bold]#{?client_prefix, PREFIX ,}#[bg=default,fg=default,bold]"
 set -g status-right "#S"
 
 # Window status formatting
-set -g window-status-format "#[fg=#{@color_gray}]#[fg=#{@color_fg},bg=#{@color_gray}]#W #I#[fg=#{@color_gray},bg=default]"
-set -g window-status-current-format "#[fg=#{@color_bg}]#[bg=#{@color_bg},fg=#{@color_white}]#W #{?window_zoomed_flag,󰊓 ,}#[fg=#{@color_white},bg=#{@color_red}] #I#[fg=#{@color_red},bg=default]"
+set -g window-status-format "#[fg=gray]#[fg=black,bg=gray]#W #I#[fg=gray,bg=default]"
+set -g window-status-current-format "#[fg=black]#[bg=black,fg=default]#W #{?window_zoomed_flag,󰊓 ,}#[fg=default,bg=red] #I#[fg=red,bg=default]"
 
 # ----------- Sesh ----------
-unbind T
-bind T run-shell "sesh connect \"$(
+bind l display-popup -w 80% -h 80% -b rounded -T '#[align=centre] Sessions ' -S 'fg=gray' \
+  -E "sesh connect $( \
   sesh list -i -t -c -z |
-  fzf --tmux 80% --ansi --reverse --padding 1,2 \
-    --border-label ' Sesh ' \
+  fzf --ansi --height=100% --reverse \
+    --style full \
+    --no-border \
     --input-label ' Input ' \
     --prompt '⚡ ' \
-    --color 'border:#{@color_gray},label:#{@color_fg}' \
-    --color 'preview-border:#{@color_blue},preview-label:#{@color_white}' \
-    --color 'list-border:#{@color_gray},list-label:#{@color_fg}' \
-    --color 'input-border:#{@color_red},input-label:#{@color_white}' \
-    --color 'header-border:#{@color_blue},header-label:#{@color_white}' \
+    --color 'input-border:red' \
+    --color 'gutter:-1' \
+    --color 'preview-scrollbar:green,preview-border:blue' \
     --preview-window 'right:55%' \
     --preview 'sesh preview {}'
-)\""
+)"
+
+# ----------- Lazygit -----------
+unbind g
+bind g display-popup -w 90% -h 90% -b rounded -T '#[align=centre] Lazygit ' -E lazygit
