Fixes nvim config path

--- a/sesh/sesh.toml
+++ b/sesh/sesh.toml
@@ -9,7 +9,7 @@ startup_command = "nvim -c ':Oil'"
 
 [[session]]
 name = "Nvim Config"
-path = "~/.dotfiles/nvim"
+path = "~/.config/nvim"
 startup_command = "nvim -c ':Oil'"
 
 [[session]]
@@ -23,12 +23,6 @@ name = "Zsh Config"
 path = "~/.dotfiles/zsh"
 startup_command = "nvim .zshrc"
 preview_command = "bat --color=always ~/.dotfiles/.zshrc"
-
-[[session]]
-name = "Ghostty Config"
-path = "~/.dotfiles/ghostty"
-startup_command = "nvim config"
-preview_command = "bat --color=always ~/.dotfiles/ghostty/config"
 
 [[session]]
 name = "App Salud Mental"
