--- a/ghostty/config
+++ b/ghostty/config
@@ -5,19 +5,14 @@ window-padding-y = 14
 
 macos-titlebar-style = transparent
 
-theme = OneHalfDark
+theme = One Double Dark
 background = #101010
-background-opacity = 0.5
+background-opacity = 0.6
 background-blur = 50
 
-font-family = MartianMono Nerd Font Mono
-
-font-style-bold = bold
-font-style-italic = italic
-font-style-bold-italic = bold-italic
+font-family = 0xProto
 
 font-thicken = false
-font-size = 17
-adjust-cell-height = 20%
-
+font-size = 21
+adjust-cell-height = 10%
 font-feature = calt, liga, ss01, ss02, ss03, ss04, ss05, ss06, ss07, ss08 ss09
